--- a/src/ColorPicker/index.css
+++ b/src/ColorPicker/index.css
@@ -4,17 +4,10 @@
 
 .ant-popover-inner {
   padding: 0 8px 16px !important;
-  // box-shadow: none;
 }
 
 .twitter-picker {
   box-shadow: none;
-
-  div {
-    // :nth-child(1) {
-    //   display: none;
-    // }
-  }
 
   span {
     div {
@@ -29,7 +22,6 @@
   height: 24px;
   padding: 2px;
   cursor: pointer;
-  // margin: 2px;
   box-sizing: border-box;
   border-radius: 2px;
   border: 1px solid #fff;
@@ -39,7 +31,7 @@
     box-shadow: 0 1px 2px rgb(0 0 0 / 12%);
   }
 
-  &-inner {
+  .antd-ce-color-item-inner {
     width: 18px;
     height: 18px;
     border-radius: 2px;
